--- a/index.html
+++ b/index.html
@@ -9,16 +9,23 @@
 
 <div class="flex-container" >
 
+    
+
 <div class="top">
 <h1> Hi, </h1>
-<h2> mein Name ist Yael </h2>
+<h4> mein Name ist Yael </h4>
 
 <p> scroll für mehr Informationen </p>
+
+
+<div class="imageHold" <a href="https://www.linkedin.com/in/yael-tönz-0012501b2/"><img src="linkedin-logo.jpg" width="50px" height="50px" /></a>
+<a href="https://instagram.com/yaeltnz?igshid=YmMyMTA2M2Y="><img src="instagram-logo.jpg" width="50px" height="50px" /></a>
+<a href="mailto:yael.toenz@gmail.com"><img src="email-logo.jpg" width="50px" height="50px" /></a>
 
 </div>
 
 <div class="ausbildung">
-<h1>Ausbildung</h1>
+<h2>Ausbildung</h2>
   <ul>
     <li>
 	2020 – 2024: Bachelor Wirtschaftsinformatik, Berner Fachhochschule
@@ -75,7 +82,7 @@
 </div>
 
 <div class="kentnisse">
-    <h1>Kentnisse</h1>
+    <h2>Kentnisse</h2>
     
     <h3>Sprachkenntnisse</h3>
 	<ul>
