--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!--Source: https://www.free-css.com/template-categories/portfolio-->
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,17 +12,11 @@
     <link rel="stylesheet" href="assets/css/yael.css">
 </head>
 
+
+
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
     <header class="header">
         <div class="container">
-            <ul class="social-icons pt-3">
-                <li class="social-item"><a class="social-link text-light" href="https://www.facebook.com/yael.tonz.5"><i
-                            class="ti-facebook" aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-instagram"
-                            aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-github"
-                            aria-hidden="true"></i></a></li>
-            </ul>
             <div class="header-content">
                 <h4 class="header-subtitle">Hello, I am</h4>
                 <h1 class="header-title">Yael</h1>
@@ -28,6 +24,8 @@
             </div>
         </div>
     </header>
+
+
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-white" data-spy="affix" data-offset-top="510">
         <div class="container">
             <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse"
@@ -68,7 +66,7 @@
                 <h3 class="font-weight-light">Who am I ?</h3>
                 <span class="line mb-5"></span>
                 <h5 class="mb-3">A Process Manager</h5>
-                <p class="mt-20">I started working at Swiss Post AG as ICT Process Manager since 2022. This includes our
+                <p class="mt-2">I started working at Swiss Post AG as ICT Process Manager since 2022. This includes our
                     service management system,
                     which is based on ITIL 4.</p>
             </div>
@@ -78,18 +76,10 @@
                 <ul class="mt40 info list-unstyled">
                     <li><span>Birthdate</span> : 14.01.2000</li>
                     <li><span>Email</span> : yael.toenz@gmail.com</li>
-                    <li><span>Phone</span> : +41 78 611 57 33</li>
+                    <li><span>Phone</span> : +41 78 600 00 00</li>
                     <li><span>Address</span> : 3030 Bern, Switzerland</li>
                 </ul>
-                <ul class="social-icons pt-3">
-                    <li class="social-item"><a class="social-link"
-                            href="https://www.linkedin.com/in/yael-tönz-0012501b2/"><i class="ti-linkedin"
-                                aria-hidden="true"></i></a></li>
-                    <li class="social-item"><a class="social-link" href="https://www.instagram.com/yaeltnz/"><i
-                                class="ti-instagram" aria-hidden="true"></i></a></li>
-                    <li class="social-item"><a class="social-link" href="https://github.com/yaeltnz"><i
-                                class="ti-github" aria-hidden="true"></i></a></li>
-                </ul>
+
             </div>
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">My Expertise</h3>
@@ -138,32 +128,48 @@
                         </div>
                         <div class="card-body">
                             <h6 class="title text-danger">2022 - Present</h6>
-                            <P>ICT Process Manager</P>
-                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum
-                                recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
+                            <P><b>ICT Process & Quality Manager</b></P>
+                            <P class="subtitle">
+                                <ul>
+                                    <li> Develop ISO 20000 certified service management system and process landscape in the area of information technology</li>
+                                    <li> Develop, manage and control processes through the Business Process Management System (ADONIS)</li>
+                                    <li> Assess the maturity of the process management culture, evaluate suitable tools for process orientation and support the
+                                    introduction and training of new tools</li>
+                                    <li> Create dashboards, analyses, reports and provide the information platform on SharePoint</li>
+                                    <li> Advise and support different units of IT in process management topics and assist staff in process and workflow
+                                    implementations</li>
+                                    <li> Examine processes for influencing factors and operational correlations and identify weaknesses and their causes in
+                                    business processes</li>
+                                </ul>
+                            </P>
                             <hr>
                             <h6 class="title text-danger">2022 - 2022</h6>
-                            <P>University Trainee Information Security Assurance</P>
-                            <P class="subtitle">Organisation and management of the ISO certification 270001,
-                                20000 and 22301 of the Information Security Management System (ISMS) and Service
-                                Management System (SMS) of Swiss Post
-                                and organising and supporting further IT audits (internal ISO audit, Digital Trust
-                                Label). Organisation and management
-                                of the external audit of Swiss Post's
-                                IT systems of Swiss Post. Administrative support for the team leader Information
-                                Security Assurance.</P>
+                            <P><b>University Trainee Information Security Assurance</b></P>
+                            <P class="subtitle">
+                                <ul>
+                                    <li>Organisation and management of the ISO certification 270001, 20000 and 22301 of the Information Security Management System (ISMS) and Service Management System (SMS) of Swiss Post</li>
+                                    <li>Organising and supporting further IT audits (internal ISO audit, Digital Trust Label)</li>
+                                    <li>Organisation and management of the external audit of Swiss Post's IT systems of Swiss Post</li>
+                                    <li>Administrative support for the team leader Information Security Assurance</li>
+                                </ul>
+                            </P>
                             <hr>
                             <h6 class="title text-danger">2021 - 2022</h6>
-                            <P>Employee Project and Test Management</P>
-                            <P class="subtitle">Working in an agile approach in an SAP S/4HANA project and support in
-                                test management, managing test case acceptance
-                                protocols and creating testing reports. Record and manage test cases in Solution Manager
-                                (SAP). Create and update a
-                                SharePoint page, communication of internal programme information. As well as giving
-                                roles and authorisations in SAP for
-                                programme staff (GRC). Ensure onboarding programme for new employees and participate in
-                                project controlling, understand
-                                and explain controlling data.</P>
+                            <P><b>Employee Project and Test Management</b></P>
+                            <P class="subtitle">
+                                <ul> 
+                                    <li>Participation according to an agile approach in an SAP S/4HANA project</li>
+                                    <li>Support in test management, administration of create test case acceptance protocols and testing reports</li>
+                                    <li>Create and manage test cases in Solution Manager (SAP)</li>
+                                    <li>Create and update a SharePoint page, communication of internal program information</li>
+                                    <li>Roles and authorisations in SAP for programme employees assign (GRC)</li>
+                                    <li>Ensure an introductory programme for new project staff</li>
+                                    <li>Participate in project controlling, understand and explain controlling data and explain</li>
+                                    <li>Organise meetings, prepare meeting documents keep minutes and follow-up tasks</li>
+                                    <li>Organise calendars, take responsibility for them from the programme management</li>
+                                    <li>Write correspondence, prepare presentations and maintain and update existing documents</li>
+                                </ul>
+                            </P>
                         </div>
                     </div>
                 </div>
@@ -177,15 +183,15 @@
                         </div>
                         <div class="card-body">
                             <h6 class="title text-danger">2020 - Present</h6>
-                            <P>Bachelor Business Information Systems</P>
+                            <P><b>Bachelor Business Information Systems</b></P>
                             <P class="subtitle">Bern University of Applied Sciences</P>
                             <hr>
                             <h6 class="title text-danger">2019 - 2020</h6>
-                            <P>Professional baccalaureate type economics</P>
+                            <P><b>Professional baccalaureate type economics</b></P>
                             <P class="subtitle">WKS KV Bildung Bern</P>
                             <hr>
                             <h6 class="title text-danger">2015 - 2018</h6>
-                            <P>Apprenticeship as commercial employee EFZ E-Profil</P>
+                            <P><b>Apprenticeship as commercial employee EFZ E-Profil</b></P>
                             <P class="subtitle">WKS KV Bildung Bern</P>
 
                         </div>
@@ -260,12 +266,12 @@
                                 <div class="progress-bar bg-danger" role="progressbar" style="width: 100%"
                                     aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
-                            <h6>English (Cambridge niveau B1)</h6>
+                            <h6>English (Cambridge B1)</h6>
                             <div class="progress mb-3">
                                 <div class="progress-bar bg-danger" role="progressbar" style="width: 60%"
                                     aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
-                            <h6>French (DELF niveau B1)</h6>
+                            <h6>French (DELF B1)</h6>
                             <div class="progress mb-3">
                                 <div class="progress-bar bg-danger" role="progressbar" style="width: 40%"
                                     aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
@@ -308,7 +314,7 @@
                                 <i class="ti-mobile icon-md"></i>
                             </div>
                             <div class="col-10 ">
-                                <h6 class="d-inline">Phone : <br> <span class="text-muted">+41 78 611 57 33</span></h6>
+                                <h6 class="d-inline">Phone : <br> <span class="text-muted">+41 78 600 60 60</span></h6>
                             </div>
                         </div>
                         <div class="row mb-2">
@@ -329,15 +335,6 @@
                                 </h6>
                             </div>
                         </div>
-                        <ul class="social-icons pt-4">
-                            <li class="social-item"><a class="social-link text-dark"
-                                    href="https://www.facebook.com/yael.tonz.5"><i class="ti-facebook"
-                                        aria-hidden="true"></i></a></li>
-                            <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-instagram"
-                                        aria-hidden="true"></i></a></li>
-                            <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-github"
-                                        aria-hidden="true"></i></a></li>
-                        </ul>
                     </div>
                 </div>
             </div>
@@ -352,7 +349,7 @@
         </div>
     </footer>
 
-    <!-- JohnDoe js -->
+    <!-- js -->
     <script src="assets/js/yael.js"></script>
 
 </body>
